wip_exec junit